--- a/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/index.html
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/index.html
@@ -4,9 +4,10 @@
     <title>ClusterKit.Monitoring</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="Content/bootstrap.min.css">
-    <script type="text/javascript" src="Scripts/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="Scripts/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="Scripts/knockout-3.3.0.js"></script>
+    <script type="text/javascript" src="Scripts/jquery.signalR-2.2.0.min.js"></script>
     <script type="text/javascript" src="Scripts/ClusterKit.Monitoring.js"></script>
 </head>
 <body>
