--- a/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/index.html
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="Content/bootstrap.min.css">
+    <link rel="stylesheet" href="Content/ClusterKit.Monitoring.css">
     <script type="text/javascript" src="Scripts/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="Scripts/knockout-3.3.0.js"></script>
@@ -22,40 +23,115 @@
         </div>
         <div data-bind="if: Connected()">
 
+            <div class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">ClusterKit.Monitoring</a>
+                    </div>
+                </div>
+            </div>
+
             <div class="row">
                 <div class="col-lg-4">
-                    <div class="navbar navbar-default">
-                        <div class="container-fluid">
-                            <div class="navbar-header">
-                                <a class="navbar-brand" href="#">Nodes</a>
-                            </div>
-                            <div>
-                                <p class="navbar-text">
-                                    Total <span class="label label-default" data-bind="text:Members().length">0</span>
-                                </p>
-                            </div>
-                            <div>
-                                <p class="navbar-text">
-                                    Active <span class="label label-success" data-bind="text:_.filter(Members(), function(m){return m.Status == 1}).length">0</span>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
 
-                    <!-- ko foreach: Members()-->
                     <div class="panel panel-default">
-                        <div class="panel-heading" data-bind="text: Address.Host + ':' + Address.Port"></div>
+                        <div class="panel-heading">Nodes</div>
                         <div class="panel-body">
-                            <p>Status: <span data-bind="text: Status"></span></p>
-                            <p>
-                                Roles:
-                                <!-- ko foreach: Roles-->
-                                <span class="label label-default" data-bind="text: $data"></span>
-                                <!-- /ko -->
-                            </p>
+
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>Address</th>
+                                        <th>Roles</th>
+                                        <th>Status</th>
+                                        <th>Leaders</th>
+                                        <th>Ping</th>
+                                    </tr>
+                                </thead>
+                                <tbody data-bind="foreach: Members()">
+                                    <tr>
+                                        <td data-bind="text: Address"></td>
+                                        <td>
+                                            <!-- ko foreach: Roles-->
+                                            <span class="label label-default" data-bind="text: $data"></span>
+                                            <!-- /ko -->
+                                        </td>
+                                        <td>
+                                            <!-- ko if: Status === 1 -->
+                                            <!-- ko if: IsReachable && PingValue != null && PingValue < 1000.0 --><span class="label label-success">UP</span><!-- /ko -->
+                                            <!-- ko if: !IsReachable --><span class="label label-warning">Unreachable</span><!-- /ko -->
+                                            <!-- ko if: PingValue == null --><span class="label label-warning">no ping</span><!-- /ko -->
+                                            <!-- ko if: PingValue != null & PingValue >= 1000.0 --><span class="label label-warning">slow ping</span><!-- /ko -->
+                                            <!-- /ko -->
+                                            <!-- ko if: Status != 1 -->
+
+                                            <span class="label" data-bind="text: StatusName, css: {'label-danger': Status === 5, 'label-waring': Status != 5}"></span>
+                                            <!-- /ko -->
+                                        </td>
+                                        <td>
+                                            <!-- ko if: IsGlobalLeader -->
+                                            <span class="label label-success">Cluster</span>
+                                            <!-- /ko -->
+                                            <!-- ko foreach: RoleLeader -->
+                                            <span class="label label-info" data-bind="text: $data"></span>
+                                            <!-- /ko -->
+                                        </td>
+                                        <td>
+                                            <!-- ko if: PingValue != null -->
+                                            <span class="badge" data-bind="text: PingValue.toFixed(2) + 'ms'"></span>
+                                            <!-- /ko -->
+                                            <!-- ko if: PingValue == null-->
+                                            <span class="label label-danger">timeout</span>
+                                            <!-- /ko -->
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
-                    <!-- /ko -->
+                </div>
+                <div class="col-lg-4">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Roles</div>
+                        <div class="panel-body">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>Role</th>
+                                        <th>Active nodes</th>
+                                        <th>Warning nodes</th>
+                                    </tr>
+                                </thead>
+                                <tbody data-bind="foreach: _.uniq(_.flatten(_.map(Members(), function(m) {return m.Roles})))">
+                                    <tr>
+                                        <td>
+                                            <span data-bind="text:$data"></span>
+                                        </td>
+                                        <td>
+                                            <span class="badge"
+                                                  data-bind="text: _.filter($root.Members(), function(m) {
+                                                  return m.Roles.indexOf($data)>= 0
+                                                && m.Status === 1
+                                                && m.IsReachable
+                                                && m.PingValue != null
+                                                && m.PingValue < 1000.0 }).length">
+                                            </span>
+                                        </td>
+                                        <td>
+                                            <span class="badge"
+                                                  data-bind="text: _.filter($root.Members(), function(m) {
+                                                  return m.Roles.indexOf($data)>= 0
+                                                && (m.Status != 1
+                                                || !m.IsReachable
+                                                || m.PingValue == null
+                                                || m.PingValue >= 1000.0) }).length">
+                                            </span>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
