swagger is working

--- a/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/index.html
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/index.html
@@ -146,7 +146,7 @@
                                 <tbody data-bind="foreach: SwaggerList">
                                     <tr>
                                         <td>
-                                            <a data-bind="text: $data, attr:{href: $data + '/swagger'}"></a>
+                                            <a data-bind="text: $data, attr:{href: $data + '/index'}" target="_blanc"></a>
                                         </td>
                                     </tr>
                                 </tbody>
